objects/ZMG__Zoomerang_Settings__c.object
<CustomObject>
    <fields>
        <fullName>ZMG__API_URL__c</fullName>
        <label>API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Dial_URL__c</fullName>
        <label>Dial URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Gateway_URL__c</fullName>
        <label>Gateway URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Pie_Chart_URL__c</fullName>
        <label>Pie Chart URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Powered_By_URL__c</fullName>
        <label>Powered By URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMG__Zoomerang_Tab_ID__c</fullName>
        <label>Zoomerang Tab ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zoomerang Settings</label>
    <listViews>
        <fullName>ZMG__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zoomerang Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoomerang Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ZMG__SecureAndNonSecureDomains</fullName>
        <active>true</active>
        <description>This is the white list of allowable domains.
Anything zoomerang.com or qanew.markettools.com must be https.
If it&apos;s not qanew.markettools.com, anything markettools.com can be http.
Also, an empty string is ok, since it will default to production.</description>
        <errorConditionFormula>NOT(
(REGEX(ZMG__Gateway_URL__c, &quot;^http://.*\\.markettools.com/.*&quot;) &amp;&amp; NOT(REGEX(ZMG__Gateway_URL__c, &quot;^http://.*\\.zoomqanew.markettools.com/.*&quot;))) ||

REGEX(ZMG__Gateway_URL__c, &quot;^https://(.*\\.zoomerang.com/.*|.*\\.zoomqanew.markettools.com/.*)&quot;) ||

TRIM(ZMG__Gateway_URL__c)  = &quot;&quot;
)</errorConditionFormula>
        <errorMessage>The Gateway URL must either be empty, in the domain of .zoomerang.com or .zoomqanew.markettools.com with https, or in the domain of .markettools.com with http (but not .zoomqanew.markettools.com under http).</errorMessage>
    </validationRules>
</CustomObject>